User and company fixes